@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.213 2007-12-02 13:44:39 cmatsuoka Exp $
+$Id: ChangeLog,v 1.214 2007-12-03 00:01:36 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -24,6 +24,7 @@ Stable versions
 	- Amiga port also buildable for AROS (AHI driver not tested)
 	- fix global track parsing in DMF loader (fixes mok-trea.dmf, reported
 	  by Lorence Lombardo)
+	- fix Winamp plugin to use the equalizer (reported by Mirko Buffoni)
 
 2.5.0 (20071127):
 	- remove DMP-specific effect from MOD loader
